--- a/index.ipynb
+++ b/index.ipynb
@@ -55,18 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[\"Hi Jim, I'm so glad to be working with you!\",\n",
-       " \"Hi Tracy, I'm so glad to be working with you!\",\n",
-       " \"Hi Lisa, I'm so glad to be working with you!\"]"
+       "\"Hi Lisa, I'm so glad to be working with you!\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +74,8 @@
     "for new_employee in new_employees:\n",
     "    welcome_messages.append(\"Hi \" + new_employee.title() + \", I'm so glad to be working with you!\" )\n",
     "\n",
-    "welcome_messages[0]\n"
+    "welcome_messages[0]\n",
+    "welcome_messages[2]\n"
    ]
   },
   {
