--- a/index.ipynb
+++ b/index.ipynb
@@ -74,8 +74,7 @@
     "for new_employee in new_employees:\n",
     "    welcome_messages.append(\"Hi \" + new_employee.title() + \", I'm so glad to be working with you!\" )\n",
     "\n",
-    "welcome_messages[0]\n",
-    "welcome_messages[2]\n"
+    "welcome_messages[0]"
    ]
   },
   {
